--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AP'
 - !lcsh 'Illustrated periodicals -- France'
+- GITenberg
 title: L'Illustration, No. 3238, 18 Mars 1905
 url: http://www.gutenberg.org/ebooks/33882
